// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Subaccount should render a default assigned subaccount 1`] = `
<Fragment>
  Subaccount 12
   (Default)
</Fragment>
`;

exports[`Component: Subaccount should render a master account tag 1`] = `
<Fragment>
  Master Account
</Fragment>
`;

exports[`Component: Subaccount should render a non-default assigned subaccount 1`] = `
<Fragment>
  Subaccount 12
</Fragment>
`;

exports[`Component: Subaccount should render a non-default assigned subaccount 2`] = `
<Fragment>
  Subaccount 13
</Fragment>
`;

exports[`Component: Subaccount should render a shared with all tag 1`] = `
<Fragment>
  Shared with all
</Fragment>
`;
